adicionado get para estado e cidade

--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -241,8 +241,10 @@ url.webmotors.modelos.tipo.anuncio=novos-usados
 url.webmotors.veiculo=http://www.webmotors.com.br/comprar/carros/novos-usados/{estado}/{marca}/{modelo}/?tipoveiculo=carros&tipoanuncio=novos%7Cusados&estado1={estado2}&marca1={marca}&modelo1={modelo}
 url.webmotors.comprar=/comprar/{marca}/{modelo}
 url.webmotors.proximo=marca1={marca}&modelo1={modelo}&qt=12&o=1&p=
-
-
+url.webmotors.cidades.estados=http://www.webmotors.com.br/endereco/listaropensearchcitiesstates?term={letra}
+url.webmotors.cidades.estados.ESTADOS=Estados
+url.webmotors.cidades.estados.CIDADES=Cidades
+url.webmotors.cidades.estados.RESULTS=Results
 
 
 
