adding final java code

--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -236,7 +236,7 @@ element.brand=selectedVehicle
 url.webmotors.marcas=http://www.webmotors.com.br/carro/marcasativas
 url.webmotors.marcas.objeto.principal=Principal
 url.webmotors.marcas.objeto.common=Common
-url.webmotors.modelos=http://www.webmotors.com.br/carro/modelosativos?marca={marca}&tipoAnuncio={tipoanuncio}
+url.webmotors.modelos=http://www.webmotors.com.br/carro/modelosativos?marca={marca}&tipoAnuncio={tipoanuncio}/carro
 url.webmotors.modelos.tipo.anuncio=novos-usados
 url.webmotors.veiculo=http://www.webmotors.com.br/comprar/carros/novos-usados/{estado}/{marca}/{modelo}/?tipoveiculo=carros&tipoanuncio=novos%7Cusados&estado1={estado2}&marca1={marca}&modelo1={modelo}
 url.webmotors.comprar=/comprar/{marca}/{modelo}
@@ -246,5 +246,8 @@ url.webmotors.cidades.estados.ESTADOS=Estados
 url.webmotors.cidades.estados.CIDADES=Cidades
 url.webmotors.cidades.estados.RESULTS=Results
 
-
-
+url.olx.marcas=http://sp.olx.com.br/veiculos/carros
+url.olx.modelos=http://sp.olx.com.br/veiculos/carros/{marca}
+url.olx.veiculo=http://{estado}.olx.com.br/veiculos/carros/{marca}/{modelo}
+url.olx.comprar=/veiculos/carros/
+url.olx.proximo=/veiculos/carros/{marca}/{modelo}?o=
